--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FillOrder"></activity>
+        <activity android:name=".homepage"></activity>
+        <activity android:name=".FillOrder" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
             <intent-filter>
