--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity android:name=".homepage" />
         <activity android:name=".FillOrder" />
         <activity android:name=".Register" />
+        <activity android:name=".Pop"
+            android:theme="@style/AppTheme.CustomTheme"
+            />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
