--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fillProject"></activity>
+        <activity android:name=".search"></activity>
+        <activity android:name=".fillProject" />
         <activity android:name=".Information" />
         <activity android:name=".homepage" />
         <activity android:name=".FillOrder" />
         <activity android:name=".Register" />
-        <activity android:name=".Pop"
-            android:theme="@style/AppTheme.CustomTheme"
-            />
+        <activity
+            android:name=".Pop"
+            android:theme="@style/AppTheme.CustomTheme" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
