--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,15 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".contact"></activity>
+        <activity android:name=".viewOrder"></activity>
         <activity android:name=".orderlist" />
-        <activity android:name=".viewOrder" />
+        <activity android:name=".contact" />
         <activity android:name=".search" />
         <activity android:name=".fillProject" />
         <activity android:name=".Information" />
         <activity android:name=".homepage" />
         <activity android:name=".Register" />
-        <activity android:name=".FillOrder"/>
+        <activity android:name=".FillOrder" />
         <activity
             android:name=".Pop"
             android:theme="@style/AppTheme.CustomTheme" />
