--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".viewOrder"></activity>
+        <activity android:name=".search_detail4"></activity>
+        <activity android:name=".search_detail3" />
+        <activity android:name=".search_detail2" />
+        <activity android:name=".search_detail1" />
+        <activity android:name=".viewOrder" />
         <activity android:name=".orderlist" />
         <activity android:name=".contact" />
         <activity android:name=".search" />
